src/core/c_api/itscam_cgi_client_c.h


typedef struct ITSCAM_CgiClient      ITSCAM_CgiClient;
typedef struct ITSCAM_CgiImage       ITSCAM_CgiImage;
typedef struct ITSCAM_CgiImageArray  ITSCAM_CgiImageArray;
typedef struct ITSCAM_CgiSnapshotRequest {
    const int32_t* shutters;          
    size_t         shuttersLen;
    const int32_t* gains;
    size_t         gainsLen;
    int32_t        quality;           
    int32_t        mosaic;            
    const char*    format;            
    int32_t        scenario;          
    const char*    crop;              
    const char*    textOverlay;
    const char* const* userMetadataKeys;
    const char* const* userMetadataValues;
} ITSCAM_CgiSnapshotRequest;
typedef struct ITSCAM_CgiStreamFrame {
    uint64_t       sequence;
    const char*    mimeType;          
    const uint8_t* data;
    size_t         dataLen;
} ITSCAM_CgiStreamFrame;
typedef void (*ITSCAM_CgiStreamCallback)(
    const ITSCAM_CgiStreamFrame* frame, void* userData);