src/core/c_api/itscam_rest_client_c.h


typedef struct ITSCAM_RestClient ITSCAM_RestClient;
typedef struct ITSCAM_String ITSCAM_String;